@@ -1,32 +1,23 @@
 package com.nhnacademy.book.book.service.Impl;
 
 import com.nhnacademy.book.book.dto.response.BookInfoResponseDto;
-import com.nhnacademy.book.book.dto.response.BookResponseDto;
-import com.nhnacademy.book.book.dto.response.BookSearchResponseDto;
-import com.nhnacademy.book.book.elastic.document.*;
-import com.nhnacademy.book.book.elastic.repository.*;
-import com.nhnacademy.book.book.entity.*;
-import com.nhnacademy.book.book.exception.BookNotFoundException;
+import com.nhnacademy.book.book.elastic.document.BookInfoDocument;
+import com.nhnacademy.book.book.elastic.repository.BookInfoRepository;
+import com.nhnacademy.book.book.entity.Category;
 import com.nhnacademy.book.book.exception.CategoryNotFoundException;
-import com.nhnacademy.book.book.exception.SellingBookNotFoundException;
-import com.nhnacademy.book.book.repository.*;
+import com.nhnacademy.book.book.repository.CategoryRepository;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.elasticsearch.core.SearchHits;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Collections;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Service
 public class BookSearchService {
-
-    private final BookSearchRepository bookSearchRepository;
 
     private final BookInfoRepository bookInfoRepository;
 
@@ -43,7 +34,7 @@ public class BookSearchService {
 
         List<BookInfoResponseDto> bookInfoResponseDtos = pagedBooks.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(bookInfoResponseDtos, pageable, books.size());
     }
@@ -62,7 +53,7 @@ public class BookSearchService {
 
         List<BookInfoResponseDto> bookInfoResponseDtos = pagedBooks.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(bookInfoResponseDtos, pageable, books.size());
 
